src/App.css
.App {
    text-align: center;
}
.icon {
    height: 450px;
    padding-top: 50px;
    padding-left: 60px;
    padding-right: 50px;
}
.logo {
    height: 50px;
}
.description {
    text-align: left;
    color: #2774AE;
    font-size: 21px;
    line-height: 21px;
    
    margin-right: 60px;
}
.App-header {
    /* navbar using flexbox model */
    display: flex;
    align-items: center;
    background-color: white;
    height: 60px;
    margin-bottom: 5px;
    box-shadow: 0 0 10px 0 #000;
}
.App-header-left {
    /* left section of header sticks to left, does not grow */
    display: flex;
    flex-grow: 0;
    padding: 0 10px;
}
.App-header-right {
    /* right section of header grows leftward, aligned to right */
    display: flex;
    flex: 1 0 0;
    justify-content: flex-end;
}
.App-header-right > * {
    /* spacing between right section items */
    margin: 0 10px;
}

body {
    font-family: 'Arial';
}

.switch {
    /*background-color: #2774AE; 
    border: none;
    color: white;
    padding: 16px 32px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;*/

    border-radius: 20px;
	border: 1px solid #2774AE;
	background-color: #2774AE;
	color: #FFFFFF;
	font-size: 12px;
	font-weight: bold;
	padding: 12px 45px;
	letter-spacing: 1px;
	text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
	/*transition: transform 80ms*/
}

.textbox {
	background-color: #eee;	
    border: none;
	padding: 12px 15px;
	margin-top: 8px;
    margin-bottom: 8px;
	width: 25%;
}

.check {
    margin-right: 0.5%;
}

.checktext {
    text-align: left;
    display:inline;
    margin-right: 18%;
}

.inputTitle {
    text-align: left;
    margin-left: 37%;
    color: #2774AE;
}

.GroupTitle {
    text-align: center;
    color: #2774AE;
}

.selector {
    background-color: #eee;	
    border: none;
	padding: 12px 15px;
	margin-top: 8px;
    margin-bottom: 8px;
	width: 27%;
}

.grouplist {
    text-align: left;
}

h1 {
    color: #2774AE;
}

li {
    margin: auto;
    list-style-type: none;
    padding-right: 0%;
    width: 8%;
}

